@@ -1,3 +1,8 @@
+2023-08-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/bug-3165.c: enabled for mcs51 & ds390,
+	  fixed warnings
+
 2023-08-26 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/asrab/rab.h,
@@ -18,7 +23,7 @@
 
 	* support/regression/tests/bug-3165.c,
 	  support/regression/tests/bug-3167.c:
-	  Rename regression test to mach correct bug number.
+	  Rename regression test to match correct bug number.
 
 2023-08-26 Maarten Brock <sourceforge.brock AT dse.nl>
 
